--- a/MrVED.css
+++ b/MrVED.css
@@ -1,7 +1,7 @@
 /* CSS styles */
     body {
       font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
+      background-color: #fff;
       margin: 0;
       padding: 0;
     }
